# edinet-mcp

./: .env.sample  CHANGELOG.md  EDGAR_DELIVERY.md  README.md  _discovery.md  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_desktop_config.json
scripts/: smoke_test.py  verify_api.py
src/edgar_mcp/: __init__.py  __main__.py  _config.py  cli.py  client.py  server.py
src/edinet_mcp/: __init__.py
tests/: test_edgar_client.py  test_edgar_server.py
